src/app/features/board/page/board-page/board-page.component.scss
@use "../../../../../styles/abstracts/breakpoints" as *;

.board {
  width: 100%;

  .header {
    width: 100%;
    height: auto;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
    row-gap: 40px;
    padding: clamp(48px, calc(48px + (100vw - 768px)), 80px)
      clamp(15px, calc(15px + (100vw - 1220px)), 64px)
      clamp(24px, calc(24px + (100vw - 768px)), 50px)
      clamp(15px, calc(15px + (100vw - 1220px)), 64px);

    &__headline {
      display: flex;
      justify-content: space-between;
      button {
        display: none;
      }
    }
    &__search-container {
      display: flex;
      gap: 32px;
    }
    &__search-field {
      display: flex;
      gap: 16px;
      align-items: center;
      background-color: var(--white);
      border: solid 1px var(--gray);
      padding: 8px 16px;
      border-radius: 10px;

      input {
        border: none;
        height: 100%;
        font-size: 20px;
        &:focus {
          outline: none;
        }
        ::placeholder {
          font-size: 20px;
        }
      }
    }
    &__separator {
      background-color: var(--lightgray);
      width: 1px;
      height: 32px;
    }
  }

  .kanban {
    width: 100%;
    height: 100%;
    display: flex;
    gap: clamp(10px, calc(10px + (100vw - 1220px)), 26px);
    padding: 0px clamp(10px, calc(10px + (100vw - 1220px)), 64px);

    &__container {
      width: 100%;
      height: 100%;
      display: flex;
      flex-direction: column;
      gap: 16px;
    }
    &__headline {
      display: flex;
    }
    &__notask {
      display: flex;
      justify-content: center;
      background: var(--lightgray);
      padding: 16px;
      border-radius: 10px;
      border: dashed 3px var(--gray);
      color: var(--gray);
    }
    &__container-cards {
      display: flex;
      flex-direction: column;
      border-radius: 24px;
      border: dashed 3px transparent;
      transition: border-color 0.2s ease;
      padding: 5px 5px 24px 5px;
      overflow-y: auto;
      max-height: calc(100vh - 370px);
      scrollbar-width: none;
      gap: 16px;
      mask-image: linear-gradient(
        to bottom,
        black 0%,
        black 95%,
        transparent 100%
      );

      &::-webkit-scrollbar {
        display: none;
      }

      &--active {
        border-color: var(--gray);
        background-color: rgba(128, 128, 128, 0.05);
      }
    }
  }

  &__card-container {
    display: flex;
    flex-direction: column;
    background: var(--white);
    padding: 16px;
    border-radius: 24px;
    gap: 24px;
    filter: drop-shadow(var(--drop-shadow));
  }
  &__card-category {
    background: var(--primary);
    padding: 4px 16px;
    width: fit-content;
    color: var(--white);
    border-radius: 8px;
  }
  &__card-content {
    display: flex;
    flex-direction: column;
    gap: 8px;

    &__card-headline {
      color: var(--primary);
      font-weight: 700;
    }
    &__card-description {
      color: var(--gray);
    }
  }
  &__card-tools {
    display: flex;
    flex-direction: column;
    gap: 24px;
  }
  &__card-tools-first {
    display: flex;
    gap: 10px;
    justify-content: space-between;
  }
  &__card-taskbar {
    width: 100%;
    border-radius: 10px;
    background: var(--lightgray);
    gap: 5px;
  }
  &__card-tools-second {
    display: flex;
    justify-content: space-between;
  }
  &__card-initials {
    background: red;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--white);
    height: 32px;
    width: 32px;
    border-radius: 100%;
    border: solid 1px var(--white);
  }
}

@media (max-width: $bp-md) {
  .board {
    height: 100vh;
    display: flex;
    flex-direction: column;

    &__card-container {
      min-width: 252px;
      max-width: 252px;
    }
  }
  .header {
    &__headline {
      display: flex;
      justify-content: space-between;
      width: 100%;
      button {
        display: flex !important;
        padding: 10px 16px;
      }
    }
    &__search-container {
      display: flex;
      gap: 32px;
      width: 100%;
      button {
        display: none;
      }
    }
    &__search-field {
      display: flex;
      width: 100%;
      gap: 16px;
      align-items: center;
      background-color: var(--white);
      border: solid 1px var(--gray);
      padding: 8px 16px;
      border-radius: 10px;
      button {
        display: flex;
      }

      input {
        border: none;
        height: 100%;
        width: 100%;
        font-size: 20px;
        &:focus {
          outline: none;
        }
        ::placeholder {
          font-size: 20px;
        }
      }
    }
  }
  .kanban {
    width: 100%;
    flex: 1;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    gap: 16px;

    &__container {
      width: 100%;
      height: auto;
    }
    &__container-cards {
      display: flex;
      flex-direction: row !important;
      overflow-x: auto;
    }
  }
}

